Fixed hero button padding and size, on mobile

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -10,4 +10,8 @@
     justify-content: center;
     align-items: center;
   }
+
+  .about-div p {
+    font-size: 2rem;
+  }
 }
