--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -33,6 +33,9 @@
 
 .hero-anchor {
   padding: 2rem;
+
+  text-align: center;
+
   border-radius: 15px;
   background-color: var(--palette-3);
 
@@ -56,11 +59,24 @@
 
 @media (max-width: 800px) {
   .hero-div {
+    height: 60vh;
+
     padding-top: min(20vh);
   }
 
+  .hero-div-button-container {
+    gap: 0.6rem;
+  }
+
   .hero-anchor {
-    padding: 1.5rem;
+    padding: 1rem 1rem;
+
+    width: 70px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     font-size: 1.8rem;
   }
 }
